# Daedalus

./: README.md  README_en.md  config.yaml  langgraph.json  pyproject.toml
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
agents/: deep_search_agent.py
docs/: welcome.md
models/: chat_model.py
src/daedalus/: __init__.py  main.py  project.py
src/daedalus/agents/: coding_agent.py  deep_search_agent.py
src/daedalus/cli/: app.py
src/daedalus/cli/components/editor/: code_view.py  editor_tabs.py
src/daedalus/tools/: ignore.py  ls_tool.py  read_file_tool.py  search_tool.py  tree_tool.py
src/daedalus/tools/edit/: tool.py
src/daedalus/tools/mcp/: load_mcp_tools.py
tools/: ls_tool.py
