[project]
name = "daedalus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "刘明", email = "liuming.5460@bytedance.com" }
]
requires-python = ">=3.14"
dependencies = [
    "httpx[socks]>=0.28.1",
    "jinja2>=3.1.6",
    "langchain-mcp-adapters>=0.3.0",
    "langchain[openai]>=1.3.9",
    "langgraph>=1.2.5",
    "pexpect>=4.9.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "tavily-python>=0.7.26",
    "textual>=8.2.7",
]

[build-system]
requires = ["uv_build>=0.11.15,<0.12.0"]
build-backend = "uv_build"
